feat: add enable and disable tasks by filters endpoints with optional request body
